--- a/package.json
+++ b/package.json
@@ -12,21 +12,24 @@
     "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.3.7",
     "base-64": "^0.1.0",
-    "expo": "^37.0.12",
+    "expo": "^45.0.0",
     "firebase": "^7.14.4",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-cards": "^1.1.4",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-paper": "^5.0.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.11.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@babel/core": "^7.12.9",
+    "babel-preset-expo": "~9.1.0"
   },
   "private": true
 }
