--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
-    "@react-navigation/native": "^5.4.0",
-    "@react-navigation/stack": "^5.3.7",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.9",
     "base-64": "^0.1.0",
     "expo": "^45.0.0",
     "firebase": "^7.14.4",
