--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.3.9",
     "base-64": "^0.1.0",
     "expo": "^45.0.0",
+    "expo-updates": "~0.13.4",
     "firebase": "^7.14.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
